--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
             <img src="_imagens/Combo.png" alt="O combp+ é a junção do alura+ e o alura língua" class="container__imagem">
             <a href="https://amzn.to/3ZgC8gA" class="container__botao" target="blank">Assine por 12x de R$ 120,00*</a>
-            <a href="https://www.alura.com.br" class="container__botao botao_secundario" target="blank"> Assinar somente o Alura+</a>
+            <a href="https://amzn.to/40Scu2T" class="container__botao botao_secundario" target="blank"> Iphone 16 Na promoção</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
